--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <script src="bundle.js"></script>
+    <script src="dist/bundle.js"></script>
     <link rel="stylesheet" href="index.css" />
   </head>
   <body>
